[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/popups/base/PopupBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/popups/terminals/TerminalBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/popups/terminals/screens/NumpadScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/popups/terminals/sound_board_terminal.gd" type="Script" id=4]





[node name="SoundBoardTerminal" type="Node2D"]
script = ExtResource( 4 )

[node name="PopupBase" parent="." instance=ExtResource( 1 )]

[node name="TerminalBase" parent="PopupBase" instance=ExtResource( 2 )]

[node name="NumpadScreen" parent="PopupBase/TerminalBase" instance=ExtResource( 3 )]
